--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,19 @@
 
 body {
     background-color: #d9dcd6;
+    margin: 0 auto;
+    width: 1903px;
 }
+
+/*Header*/
 
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
+    color: #ffffff;    
+    height: auto;
+    width: 100%;
 }
 
 .header h1 {
@@ -24,7 +30,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +38,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -46,18 +52,32 @@ a {
     text-decoration: none;
 }
 
+/*End of Header*/
+
+
+
 p {
     font-size: 16px;
 }
 
-.hero {
+
+
+/*1st Section Under Header*/
+
+.Image-Under-Header {
     height: 800px;
-    width: 100%;
+    width: 1903px;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
+
+/*End of 1st Section Under Header*/
+
+
+
+/*2nd Section Content*/
 
 .float-left {
     float: left;
@@ -70,124 +90,65 @@ p {
 }
 
 .content {
-    width: 75%;
+    width: 1500px;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 20px;;
 }
 
-.benefits {
-    margin-right: 20px;
+.Content-Article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.Content-Article img {
+    max-height: 200px;
+}
+
+.Content-Article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*End of 2nd Section Content*/
+
+
+
+/*3rd Section Benefits*/
+
+.benefits { 
+    margin-right: 23px;
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%;
-    height: 100%;
+    width: 350px;
+    height: 1000px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
+.Benefit-Aside { 
+    margin-bottom: 32px; 
+    color: #ffffff; 
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.Benefit-Aside h3 {
+    margin-bottom: 10px; 
+    text-align: center; 
 }
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
+.Benefit-Aside img {
+    display: block; 
+    margin: 20px auto; 
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/*End of 3rd Section Benefits*/
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*Footer*/
 .footer {
     padding: 30px;
     clear: both;
@@ -198,3 +159,7 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/*End of Footer*/
+
+
+
